<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_lg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_auto_lock"
        style="@style/TextAppearance.PassMan.TitleMedium" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg">

        <RadioButton
            android:id="@+id/radio1min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_md"
            android:text="@string/auto_lock_1min" />

        <RadioButton
            android:id="@+id/radio5min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_md"
            android:text="@string/auto_lock_5min"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radio15min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_md"
            android:text="@string/auto_lock_15min" />

        <RadioButton
            android:id="@+id/radio30min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_md"
            android:text="@string/auto_lock_30min" />

        <RadioButton
            android:id="@+id/radioNever"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_md"
            android:text="@string/never" />

    </RadioGroup>

</LinearLayout>
